home-info/templates/deployment.yml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yml", "labels", "podAntiAffinity")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.app + "-dashboard"
  namespace: #@ data.values.namespace
spec:
  selector:
    matchLabels: #@ labels("dashboard")
  replicas: #@ data.values.home_info.replicas
  template:
    metadata:
      labels: #@ labels("dashboard")
    spec:
      affinity: #@ podAntiAffinity("dashboard")
      containers:
      - name: home-info-dashboard
        image: #@ data.values.home_info.image
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "150m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          httpGet:
            path: /
            port: 8080
