home-info/templates/ingress.yml
#@ load("@ytt:data", "data")
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: home-info-dashboard
  namespace: home-info
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: home-info-tls
    hosts:
    #@ for/end host in data.values.domains:
    - #@ "home-info." + host
  rules:
  #@ for/end host in data.values.domains:
  - host: #@ "home-info." + host
    http:
      paths:
      - backend:
          serviceName: home-info-dashboard
          servicePort: 8080
